# rebuildr

./: .bazelrc  .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_REFERENCE.md  BAZEL_INTEGRATION.md  CONTENT_ADDRESSABILITY.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  NOTICE  README.md  REBUILDR_FORMAT.md  TODO.md  TROUBLESHOOTING.md  WORKSPACE  flake.nix  pyproject.toml  rebuildr.bzl  rules.bzl  some-file.txt  treefmt.nix
.github/: .pinact.yaml
.github/workflows/: README.md  ci-quick.yml  ci.yml  compatibility.yml  dependencies.yml  dist-content-id.yml  dist-image.yml  dist-latest.yml  dist-release.yml  docker-build.yml  docker-dist.yml  flake-check.yml  nix-ci.yml  quick-check.yml  release-dist.yml  release.yml  update-flake-lock.yml
bzl/example/apps/django/: BUILD.bazel  Dockerfile  django.rebuildr.py
bzl/example/apps/dotnet/: BUILD.bazel  Dockerfile  dotnet.rebuildr.py
bzl/example/apps/realworld-gin-sqlc/: BUILD.bazel  Dockerfile  realworld.rebuildr.py
bzl/rule/: derive.bzl  image.bzl  materialize.bzl  providers.bzl  push.bzl  rebuildr_test.sh  rule.bzl
bzl/test_example_bzl_deps/: BUILD.bazel
bzl/test_example_bzl_deps/external_repository/: BUILD.bazel  external_test_example_bzl_deps.txt
bzl/test_example_bzl_deps/external_repository/external_subdir/: file_in_subdir.txt
bzl/tests/: BUILD.bazel  Dockerfile  test.rebuildr.py  test_descriptor.py  test_file.txt  test_image.stable.id.txt  test_image.stable.json  test_image_build.stable.json  test_image_check.sh  test_image_with_build_args.stable.json  test_image_with_env.stable.json
bzl/tests/build_tests/: BUILD.bazel  dependencies_mapping.Dockerfile  dependencies_mapping.rebuildr.py  example_file.txt
bzl/tests/example_bzl_deps/: BUILD.bazel  transitive_file.txt
ci/: small.Dockerfile  small.rebuildr.py  tiny.Dockerfile  tiny.rebuildr.py
docs/: docker_compatibility.md
examples/: Dockerfile.multi-stage  README.md  complex-patterns.rebuildr.py  environment-config.rebuildr.py  external-deps.rebuildr.py  first.Dockerfile  first.rebuildr.py  multi-platform.rebuildr.py  multi-stage.rebuildr.py  to-tar.rebuildr.py  webapp.Dockerfile
rebuildr/: BUILD.bazel  build.py  cli.py  context.py  descriptor.py  fs.py  stable_descriptor.py  validators.py
rebuildr/containers/: docker.py  docker_file.py  util.py
rebuildr/tools/: docker_git_repo_as_layer.py  git.py
tests/: test_aaaa.py  test_build.py  test_cli.py  test_containers.py  test_context.py  test_descriptor.py  test_error_handling.py  test_fs.py  test_git_repo.py  test_integration.py  test_stable_descriptor.py  test_stub.py  test_tar_context.py  test_tools.py  test_validators.py  utils.py
tests/basic/: build_args.rebuildr.py  simple.rebuildr.py  test_build_args.py  test_simple.py
tests/simple/: simple.rebuildr.py  simple_with_binary_file.rebuildr.py  simple_with_glob.rebuildr.py  test_simple.py
