[project]
name = "rebuildr"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
authors = [{ name = "Paweł Chojnacki", email = "pawelchcki@gmail.com" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rebuildr = "rebuildr.cli:main"
