[project]
name = "rebuildr"
version = "0.1.0"
description = "Tool for mass building dependency-based Docker images with reproducible builds"
requires-python = ">=3.10"
authors = [{ name = "Paweł Chojnacki", email = "pawelchcki@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["docker", "build", "reproducible", "bazel", "containers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rebuildr = "rebuildr.cli:main"

[tool.uv]
dev-dependencies = ["pytest~=8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
