[project]
name = "rebuildr"
version = "0.2-dev"
description = ""
requires-python = ">=3.10"
authors = [{ name = "Paweł Chojnacki", email = "pawelchcki@gmail.com" }]
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rebuildr = "rebuildr.cli:main"

[tool.uv]
dev-dependencies = ["pytest~=8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
