load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "rebuildr_lib",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "rebuildr",
    srcs = ["cli.py"]  ,
    main = "cli.py",
    imports = ["rebuildr"],
    visibility = ["//visibility:public"],
    deps = [":rebuildr_lib"],
    legacy_create_init = False,
)

exports_files(glob(["**/*.py"]), visibility = ["//visibility:public"])