load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "rebuildr_lib",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "rebuildr",
    srcs = ["cli.py"],
    imports = ["rebuildr"],
    legacy_create_init = False,
    main = "cli.py",
    visibility = ["//visibility:public"],
    deps = [":rebuildr_lib"],
)

exports_files(
    glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)
