load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//:rules.bzl", "rebuildr_image", "rebuildr_materialize")

rebuildr_image(
    name = "dotnet_image",
    srcs = [
        "Dockerfile",
    ],
    descriptor = "dotnet.rebuildr.py",
)

rebuildr_materialize(
    name = "dotnet_materialize",
    src = ":dotnet_image",
    tags = [
        "external",
        "no-cache",
        "no-remote",
    ],
)

build_test(
    name = "test",
    targets = [
        ":dotnet_materialize",
    ],
)
